syntax = "proto3";

option csharp_namespace = "JiraBoardgRPC";

package userauth;

service UserAuth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message RegisterResponse {
    bool success = 1;
    string message = 2; 
    int32 user_id = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string message = 2;
    int32 user_id = 3;
}
